仅支持最新的 1.10 版本

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ os:
 go:
   - tip
   - "1.10"
-  - 1.9
-  - 1.8
 
-script: go test -coverprofile=coverage.txt -covermode=atomic $(go list ./...| grep -v /vendor/)
+script: go test -v -coverprofile=coverage.txt -covermode=atomic $(go list ./...| grep -v /vendor/)
 
 after_success: bash <(curl -s https://codecov.io/bash)
