添加对 go1.11 的支持

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ os:
 
 go:
   - tip
+  - 1.11
   - "1.10"
 
-script: go test -v -coverprofile=coverage.txt -covermode=atomic $(go list ./...| grep -v /vendor/)
+script: env GO111MODULE=on go test -v -coverprofile=coverage.txt -covermode=atomic $(go list ./...)
 
 after_success: bash <(curl -s https://codecov.io/bash)
