--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,7 @@ clone_folder: c:\gopath\src\github.com\issue9\assert
 environment:
   GO111MODULE: on
 
-stack: go 1.11
-stack: go 1.12
+stack: go 1.11, go 1.12
 
 before_test:
   - go vet ./...
